# learn-qt-2026

./: CLAUDE.md  LearningPath.md  README.md  Schedule.md
project/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CppHighlighter.cpp  CppHighlighter.h  FileBrowser.cpp  FileBrowser.h  FindReplaceDialog.cpp  FindReplaceDialog.h  HexViewer.cpp  HexViewer.h  LogDelegate.cpp  LogDelegate.h  LogFilterProxy.cpp  LogFilterProxy.h  LogModel.cpp  LogModel.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  ProcessLauncher.cpp  ProcessLauncher.h  SerialMonitorTab.cpp  SerialMonitorTab.h  SerialWorker.cpp  SerialWorker.h  TextEditorTab.cpp  TextEditorTab.h  main.cpp
weeks/week-01/: environment-setup.md  introduction-to-qt.md  qt-architecture.md
weeks/week-02/: qt-object-model.md  qt-types.md  testing-and-debugging.md
weeks/week-03/: event-loop.md  signals-and-slots.md
weeks/week-04/: main-window.md  widgets-and-layouts.md
weeks/week-05/: dialogs.md  file-io.md
weeks/week-06/: drag-and-drop.md  text-display.md
weeks/week-07/: model-view.md
weeks/week-08/: delegates.md  proxy-models.md
weeks/week-09/: custom-text-editor.md  syntax-highlighting.md
weeks/week-10/: file-browser.md  find-replace.md
weeks/week-11/: serial-port.md
weeks/week-12/: threading.md
weeks/week-13/: hex-display.md  process-launcher.md
weeks/week-14/: cross-platform.md  deployment.md
